fix align error

--- a/src/styles/LandingPage.css
+++ b/src/styles/LandingPage.css
@@ -36,13 +36,22 @@
     .margin-20 {margin-top: 32px;}
 }
 
-.main-sentence {
+.main-sentence-1 {
     font-family: 'Delight Coffee', sans-serif;
     font-size: 36px;
     font-weight: bold;
     letter-spacing: 5px;
     color: #F9C10B;
     margin: 64px 0 16px 0;
+}
+
+.main-sentence-2 {
+    font-family: 'Delight Coffee', sans-serif;
+    font-size: 36px;
+    font-weight: bold;
+    letter-spacing: 5px;
+    color: #F9C10B;
+    margin: 0 0 16px 0;
 }
 
 .main-sentence-underlined {
